# LeftShift

./: .gitignore  README.md  pyproject.toml
src/leftshift/: __init__.py  server.py  structures.py
