[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LeftShift"
version = "0.0.1"
authors = [
  { name="Alessandro Salerno" },
]
description = "A simple library for the LeftShift Protocol: a simple communication protocol based on HTTP"
license = { file="LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Alessandro-Salerno/CBuild"
"Bug Tracker" = "https://github.com/Alessandro-Salerno/CBuild/issues"